--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </h2>
 
         <h2 class="derecha-lorem">Lado B
-            <p style="font:  initial;">2.- Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
+            <p style="font:  initial;">2.- Loremmmmmmm ipsum dolor sit amet consectetur adipisicing elit. Facere
             provident assumenda sequi tempore optio, ipsam pariatur ullam sint expedita iste, eaque qui quas nesciunt,
             id aspernatur? Nisi necessitatibus itaque quam!</p>
         </h2>
