modificaciones de index y css, mas carpeta de image

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="es">
 
 <head>
     <meta charset="utf-8">
@@ -13,27 +13,50 @@
 
 <body>
     <header>
-        <h2> Logo Corporativo</h2>
-
+        <a href="/"><img src=image/icon/logo-html.png alt="home" width="50px"></a>
+        <hgroup>
+            <h1>Páginas para las pruebas</h1>
+            <!-- <h2 class="tagline">
+                Se hizo un gran esfuerzo para hacer esto sin esfuerzo.
+            </h2> -->
+        </hgroup>
     </header>
 
-    <section class="left-right">
 
-        <h2 class="izquierda-lorem">Lado A
-            <p style="font:  initial;">1.- Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere provident
+    <section class="left-right">
+        <div class="l1-lorem">
+            <h2>Lado A1</h2>
+            <p>1.- Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere provident
                 assumenda sequi tempore optio, ipsam pariatur ullam sint expedita iste, eaque qui quas nesciunt, id
                 aspernatur? Nisi necessitatibus itaque quam!</p>
-        </h2>
+        </div>
+        <div class="l2-lorem">
+            <h2>Lado B1</h2>
+            <p>2.- Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
+                provident assumenda sequi tempore optio, ipsam pariatur ullam sint expedita iste, eaque qui quas
+                nesciunt, id aspernatur? Nisi necessitatibus itaque quam!</p>
 
-        <h2 class="derecha-lorem">Lado B
-            <p style="font:  initial;">2.- Loremmmmmmm ipsum dolor sit amet consectetur adipisicing elit. Facere
-            provident assumenda sequi tempore optio, ipsam pariatur ullam sint expedita iste, eaque qui quas nesciunt,
-            id aspernatur? Nisi necessitatibus itaque quam!</p>
-        </h2>
-
-
+        </div>
+    </section>
+    <section class="left-right">
+        <div class="l3-lorem">
+            <h2>Lado A2</h2>
+            <p>1.- Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus vitae quia sapiente excepturi ut
+                laborum maiores, eos magnam eaque itaque fugiat modi eum a culpa numquam commodi consequatur assumenda!
+                Dolore?</p>
+        </div>
+        <div class="l4-lorem">
+            <h2>Lado B2</h2>
+            <p>2.- Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores itaque eos velit unde pariatur
+                minima architecto aliquid? Ipsa, omnis. Ex voluptatem illum suscipit pariatur autem ratione rerum sequi
+                voluptate ipsum?</p>
+        </div>
     </section>
 
+    <footer id="footer">
+        <!--<p>&#167;</p>-->
+        <p>&#169; 2019&#8211;20 <a href="#">José Gil</a>
+            </footer">
 
 </body>
 
