--- a/index.html
+++ b/index.html
@@ -22,22 +22,38 @@
         </hgroup>
     </header>
 
-
     <section class="left-right">
+
         <div class="l1-lorem">
             <h2>Lado A1</h2>
             <p>1.- Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere provident
                 assumenda sequi tempore optio, ipsam pariatur ullam sint expedita iste, eaque qui quas nesciunt, id
                 aspernatur? Nisi necessitatibus itaque quam!</p>
         </div>
-        <div class="l2-lorem">
-            <h2>Lado B1</h2>
-            <p>2.- Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
-                provident assumenda sequi tempore optio, ipsam pariatur ullam sint expedita iste, eaque qui quas
-                nesciunt, id aspernatur? Nisi necessitatibus itaque quam!</p>
-
-        </div>
+        <section class="left-right">
+            <div>
+                <div class="l2a-lorem">
+                    <h2>1</h2>
+                    <p>2.- Lorem ipsum dolor</p>
+                </div>
+                <div class="l2b-lorem">
+                    <h2>2</h2>
+                    <p>2.- Lorem ipsum dolor</p>
+                </div>
+            </div>
+            <div>
+                <div class="l2c-lorem">
+                    <h2>3</h2>
+                    <p>2.- Lorem ipsum dolor</p>
+                </div>
+                <div class="l2d-lorem">
+                    <h2>4</h2>
+                    <p>2.- Lorem ipsum dolor</p>
+                </div>
+            </div>
+        </section>
     </section>
+
     <section class="left-right">
         <div class="l3-lorem">
             <h2>Lado A2</h2>
@@ -47,6 +63,12 @@
         </div>
         <div class="l4-lorem">
             <h2>Lado B2</h2>
+            <p>2.- Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores itaque eos velit unde pariatur
+                minima architecto aliquid? Ipsa, omnis. Ex voluptatem illum suscipit pariatur autem ratione rerum sequi
+                voluptate ipsum?</p>
+        </div>
+        <div class="l5-lorem">
+            <h2>Lado C2</h2>
             <p>2.- Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores itaque eos velit unde pariatur
                 minima architecto aliquid? Ipsa, omnis. Ex voluptatem illum suscipit pariatur autem ratione rerum sequi
                 voluptate ipsum?</p>
